--- a/app/src/main/res/layout/activity_dogs_main.xml
+++ b/app/src/main/res/layout/activity_dogs_main.xml
@@ -5,7 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".SubMainActivity">
+    tools:context=".SubMainActivity"
+    android:name="com.example.myapplication.RecommendFragment"
+    tools:layout="@layout/fragment_recommend">
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="wrap_content"
