--- a/app/src/main/res/layout/fragment_recommend.xml
+++ b/app/src/main/res/layout/fragment_recommend.xml
@@ -19,11 +19,9 @@
 
 
     <ScrollView
-        android:layout_width="350dp"
-        android:layout_height="400dp"
-        android:layout_gravity="center"
-        android:maxWidth="350dp"
-        android:maxHeight="400dp">
+        android:layout_width="354dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="center">
 
         <LinearLayout
             android:layout_width="match_parent"
