--- a/app/src/main/res/layout/fragment_recommend_later.xml
+++ b/app/src/main/res/layout/fragment_recommend_later.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/fragment_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".RecommendFragment">
+    tools:context=".RecommendLaterFragment">
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -38,27 +37,25 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="interests"
-                    android:textColor="#F37F41"
+                    android:text="likes"
+                    android:textColor="#E91E63"
                     android:textSize="18sp" />
             </LinearLayout>
+
         </LinearLayout>
 
         <Button
             android:id="@+id/recommend_btn"
-            android:layout_width="100dp"
+            android:layout_width="130dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="2dp"
             android:padding="5dp"
             android:backgroundTint="#FFFFFF"
             android:textColor="@color/black"
-            android:text="based on your likes"
+            android:text="based on your interests"
             android:textAllCaps="false"
             />
     </LinearLayout>
-
-
-
 
     <ScrollView
         android:layout_width="354dp"
