--- a/app/src/main/res/layout/activity_dogs_main.xml
+++ b/app/src/main/res/layout/activity_dogs_main.xml
@@ -23,11 +23,12 @@
             android:layout_gravity="center_vertical"
             android:background="@drawable/edge"
             android:ems="10"
+            android:fontFamily="@font/bccardb"
             android:hint="Search"
             android:inputType="textPersonName"
             android:padding="10dp"
             android:textColorHint="#7A7A7A"
-            android:textSize="16sp" />
+            android:textSize="18sp" />
 
         <ImageButton
             android:id="@+id/imgBtn_search"
