--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -35,8 +35,9 @@
         android:id="@+id/txt_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/bccardb"
         android:text="Login"
-        android:textSize="40sp"
+        android:textSize="44sp"
         android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="@id/guidelineStart"
         app:layout_constraintTop_toTopOf="@id/guidelineTop"
@@ -49,6 +50,7 @@
         android:layout_marginTop="88dp"
         android:background="@drawable/edge"
         android:ems="10"
+        android:fontFamily="@font/bccardb"
         android:hint="ID를 입력하세요"
         android:inputType="textPersonName"
         android:padding="10dp"
@@ -65,6 +67,7 @@
         android:layout_marginTop="16dp"
         android:background="@drawable/edge"
         android:ems="10"
+        android:fontFamily="@font/bccardb"
         android:hint="비밀번호를 입력하세요"
         android:inputType="textPassword"
         android:padding="10dp"
@@ -80,9 +83,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:backgroundTint="#000000"
+        android:fontFamily="@font/bccardb"
         android:text="로그인"
         android:textColor="#FFFFFF"
-        android:textSize="24sp"
+        android:textSize="26sp"
         app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
         app:layout_constraintStart_toStartOf="@id/guidelineStart"
         app:layout_constraintTop_toBottomOf="@id/editTxt_pwd" />
