--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,9 +32,10 @@
         android:id="@+id/txt_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/bccardb"
         android:text="Cook for Pet"
         android:textColor="#000000"
-        android:textSize="48sp"
+        android:textSize="50sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
         app:layout_constraintStart_toStartOf="@+id/guidelineStart"
@@ -45,10 +46,12 @@
         android:id="@+id/txt_subtitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="396dp"
+        android:layout_marginBottom="380dp"
+        android:layout_marginTop="10dp"
+        android:fontFamily="@font/bccardr"
         android:text="Your pet deserves good food!"
         android:textColor="#000000"
-        android:textSize="25sp"
+        android:textSize="27sp"
         app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
         app:layout_constraintStart_toStartOf="@+id/guidelineStart"
         app:layout_constraintTop_toBottomOf="@+id/txt_title" />
@@ -59,6 +62,7 @@
         android:layout_height="70dp"
         android:layout_marginStart="16dp"
         android:backgroundTint="#FFFFFF"
+        android:fontFamily="@font/bccardb"
         android:text="LOGIN"
         android:textColor="#000000"
         android:textSize="18sp"
@@ -73,6 +77,7 @@
         android:layout_height="70dp"
         android:layout_marginEnd="16dp"
         android:backgroundTint="#000000"
+        android:fontFamily="@font/bccardb"
         android:text="REGISTER"
         android:textColor="#FFFFFF"
         android:textSize="18sp"
