--- a/app/src/main/res/layout/fragment_cat_result.xml
+++ b/app/src/main/res/layout/fragment_cat_result.xml
@@ -18,6 +18,7 @@
                 android:id="@+id/txt_result"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/suncheonr"
                 android:text="99"
                 android:textColor="#F37F41"
                 android:textSize="24sp" />
@@ -25,6 +26,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/suncheonr"
                 android:text=" results"
                 android:textColor="@color/black"
                 android:textSize="20sp" />
@@ -38,6 +40,7 @@
             android:padding="0dp"
             android:backgroundTint="#FFFFFF"
             android:textColor="@color/purple_700"
+            android:fontFamily="@font/bccardb"
             android:text="All"
             android:textAllCaps="false"
             />
@@ -49,6 +52,7 @@
             android:backgroundTint="#FFFFFF"
             android:textColor="@color/purple_700"
             android:layout_marginHorizontal="2dp"
+            android:fontFamily="@font/bccardb"
             android:text="Dog's"
             android:textAllCaps="false"
             />
@@ -60,6 +64,7 @@
             android:textColor="#FFFFFF"
             android:backgroundTint="@color/purple_700"
             android:layout_marginHorizontal="2dp"
+            android:fontFamily="@font/bccardb"
             android:text="Cat's"
             android:textAllCaps="false"
             />
