--- a/app/src/main/res/layout/fragment_delete.xml
+++ b/app/src/main/res/layout/fragment_delete.xml
@@ -15,18 +15,20 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/bccardr"
             android:text="Hello "
             android:layout_gravity="bottom"
             android:textColor="@color/black"
-            android:textSize="24sp"
+            android:textSize="28sp"
             />
         <TextView
             android:id="@+id/name_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/bccardr"
             android:text="user_name"
             android:textColor="@color/purple_500"
-            android:textSize="28sp"/>
+            android:textSize="32sp"/>
     </LinearLayout>
     <TextView
         android:id="@+id/textView"
@@ -34,8 +36,9 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="100dp"
+        android:fontFamily="@font/bccardr"
         android:text="Do you really want to delete your account?"
-        android:textSize="30sp" />
+        android:textSize="28sp" />
     <Button
             android:id="@+id/btn_yes"
             android:layout_width="140dp"
@@ -43,7 +46,8 @@
             android:layout_gravity="center"
         android:layout_marginTop="100dp"
             android:backgroundTint="#0B0A0A"
-            android:text="Delete"
+        android:fontFamily="@font/bccardb"
+            android:text="회원 탈퇴"
             android:textSize="20sp"
             app:iconTint="#000000" />
 </LinearLayout>
