--- a/app/src/main/res/layout/fragment_likes.xml
+++ b/app/src/main/res/layout/fragment_likes.xml
@@ -13,18 +13,20 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/bccardr"
             android:text="Hello "
             android:layout_gravity="bottom"
             android:textColor="@color/black"
-            android:textSize="24sp"
+            android:textSize="28sp"
             />
         <TextView
             android:id="@+id/name_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/bccardr"
             android:text="user_name"
             android:textColor="@color/purple_500"
-            android:textSize="28sp"/>
+            android:textSize="32sp"/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -34,12 +36,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
+            android:fontFamily="@font/suncheonr"
             android:text="55"
             android:textColor="#F37F41"
             android:textSize="24sp"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/suncheonr"
             android:text=" liked"
             android:textColor="@color/black"
             android:textSize="20sp" />
