--- a/app/src/main/res/layout/fragment_recommend_later.xml
+++ b/app/src/main/res/layout/fragment_recommend_later.xml
@@ -16,14 +16,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="50dp"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_gravity="center_vertical">
             <TextView
                 android:id="@+id/txt_recommend"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/bccardb"
                 android:text="Recommend"
                 android:textColor="@color/black"
-                android:textSize="22sp" />
+                android:textSize="24sp" />
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -31,15 +33,17 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:fontFamily="@font/bccardr"
                     android:text="based on your "
                     android:textColor="@color/black"
                     android:textSize="18sp" />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:fontFamily="@font/bccardr"
                     android:text="likes"
                     android:textColor="#E91E63"
-                    android:textSize="18sp" />
+                    android:textSize="20sp" />
             </LinearLayout>
 
         </LinearLayout>
@@ -52,6 +56,7 @@
             android:padding="5dp"
             android:backgroundTint="#FFFFFF"
             android:textColor="@color/black"
+            android:fontFamily="@font/bccardb"
             android:text="based on your interests"
             android:textAllCaps="false"
             />
