--- a/app/src/main/res/layout/mat_list.xml
+++ b/app/src/main/res/layout/mat_list.xml
@@ -21,6 +21,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:fontFamily="@font/suncheonr"
                 android:text="재료"
                 android:textColor="@color/black"/>
             <TextView
@@ -28,6 +29,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:fontFamily="@font/suncheonr"
                 android:text="단위"
                 android:textColor="@color/black"/>
             </LinearLayout>
