--- a/app/src/main/res/layout/recipe_list.xml
+++ b/app/src/main/res/layout/recipe_list.xml
@@ -26,6 +26,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="6dp"
+            android:fontFamily="@font/suncheonb"
             android:text="레시피명"
             android:textColor="@color/black"
             android:textSize="20sp" />
@@ -37,6 +38,7 @@
                 android:layout_marginLeft="6dp"
                 android:textColor="#7A7A7A"
                 android:textSize="16sp"
+                android:fontFamily="@font/suncheonr"
                 android:text="재료 목록">
             </TextView>
 
