--- a/app/src/main/res/layout/step_list.xml
+++ b/app/src/main/res/layout/step_list.xml
@@ -13,6 +13,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
+                android:fontFamily="@font/suncheonb"
                 android:text="숫자"
                 android:textSize="18sp"
                 android:textColor="@color/black"/>
@@ -21,6 +22,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
+                android:fontFamily="@font/suncheonr"
                 android:text="과정 설명"
                 android:textSize="16sp"
                 android:textColor="@color/black"/>
