--- a/app/src/main/res/layout/fragment_ref_detail.xml
+++ b/app/src/main/res/layout/fragment_ref_detail.xml
@@ -35,7 +35,7 @@
             />
         <TextView
             android:id="@+id/txt_title"
-            android:layout_width="wrap_content"
+            android:layout_width="350dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginLeft="5dp"
@@ -47,7 +47,7 @@
             />
         <TextView
             android:id="@+id/txt_tip"
-            android:layout_width="wrap_content"
+            android:layout_width = "350dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginLeft="5dp"
