--- a/app/src/main/res/layout/fragment_recommend.xml
+++ b/app/src/main/res/layout/fragment_recommend.xml
@@ -77,6 +77,8 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recycler_rcp"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"></androidx.recyclerview.widget.RecyclerView>
         </LinearLayout>
