--- a/app/src/main/res/layout/activity_dogs_main.xml
+++ b/app/src/main/res/layout/activity_dogs_main.xml
@@ -26,7 +26,7 @@
             android:fontFamily="@font/bccardb"
             android:hint="Search"
             android:inputType="textPersonName"
-            android:padding="10dp"
+            android:padding="15dp"
             android:textColorHint="#7A7A7A"
             android:textSize="18sp" />
 
@@ -50,6 +50,7 @@
 
         <fragment
             android:id="@+id/recommend_fragment"
+            android:layout_marginTop="15dp"
             android:name="com.example.myapplication.RecommendFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
