--- a/app/src/main/res/layout/fragment_recommend_later.xml
+++ b/app/src/main/res/layout/fragment_recommend_later.xml
@@ -74,6 +74,8 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recycler_rcp"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"></androidx.recyclerview.widget.RecyclerView>
         </LinearLayout>
